# cmake-and-cpp

01.cmake_cpp_&_headers/: CMakeLists.txt  build.sh  create_make.sh
02.cmake_buildscript_&_outputfolder/buildscript/: CMakeLists.txt  build.sh
03.cmake_subcmake_library/buildscript/: CMakeLists.txt  build.sh
03.cmake_subcmake_library/modules/base64/buildscript/: build.sh
03.cmake_subcmake_library/modules/main/buildscript/: CMakeLists.txt  build.sh
03b.cmake_subcmake_library/buildscript/: CMakeLists.txt  build.sh
03b.cmake_subcmake_library/modules/base64/buildscript/: CMakeLists.txt
04.cmake_subcmake_lib_&_dependencies/buildscript/: CMakeLists.txt  build.sh
04.cmake_subcmake_lib_&_dependencies/modules/base64/buildscript/: CMakeLists.txt
04.cmake_subcmake_lib_&_dependencies/modules/main/buildscript/: CMakeLists.txt  build.sh
04b.cmake_subcmake_lib_&_dependencies/modules/main/buildscript/: CMakeLists.txt
04b.cmake_subcmake_lib_&_dependencies/modules/main/src/cpp/: main.cpp
05.cmake_install_find_package/cmake_tutorial/: README.md
05.cmake_install_find_package/cmake_tutorial/app/: CMakeLists.txt
05.cmake_install_find_package/cmake_tutorial/app/src/: main.cpp
05.cmake_install_find_package/cmake_tutorial/my_libraries/: CMakeLists.txt
05.cmake_install_find_package/cmake_tutorial/my_libraries/cmake/: MyLibrariesConfig.cmake
05.cmake_install_find_package/cmake_tutorial/my_libraries/include/my_libraries/: my_library_a.hpp
05.cmake_install_find_package/cmake_tutorial/my_libraries/src/: my_library_a.cpp
05.cmake_install_find_package/cmake_tutorial/some_libraries/: CMakeLists.txt
05.cmake_install_find_package/cmake_tutorial/some_libraries/cmake/: SomeLibrariesConfig.cmake
05.cmake_install_find_package/cmake_tutorial/some_libraries/include/some_libraries/: some_library_a.hpp  some_library_b.hpp
05.cmake_install_find_package/cmake_tutorial/some_libraries/src/: some_library_a.cpp  some_library_b.cpp
